# QTS2026

./: .gitignore  CHANGES.md  DEPLOYMENT.md  GEMINI.md  PRD.md  README.md  config.yaml  debug_obs.py  debug_softmax.py  debug_spectral_data.py  doctor.py  main.py  model.pt  pyproject.toml  run.py  test_rl.py
alpha_factory/: meta_controller.py  observation_utils.py  rl_environment.py  rl_environment_bare_metal.py  simulation_engine.py  strategy_engine.py  wfo_engine.py
cockpit_backend/: main.py  streamer.py
cockpit_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_V7_1_LAYOUT.md  ARTICLE.md  DEV_VS_MAIN_ARCHITECTURE.md  LONG_SHORT_MECHANICS_CASE_STUDY.md  MISSION_CONTROL_UI.md  OPERATIONS_MANUAL.md  PRD_10K_SCALE.md  PRD_ARCHITECTURE_UPGRADE.md  PRD_PRODUCTION_GRADE.md  PRD_RL_PORTFOLIO_OPTIMIZER.md  PRD_UNIFIED_INTELLIGENCE.md  README_RL.md  RESEARCH_OPTIMIZATION_LOG.md  RL_ENVIRONMENT_V4_2_BALANCED.md  STRATEGY_DECISION_LABELS.md  STRATEGY_V4_ELITE_HYBRID.md  STRATEGY_V5_MASTER_CHIEF.md  STRATEGY_V6_GHOST_PROTOCOL.md  STRATEGY_V7_SNIPER_RESIDUAL.md  TASKS_10K_SCALE.md  TASKS_ARCHITECTURE_UPGRADE.md  TASKS_PRODUCTION_GRADE.md  V2_60_STOCK_SWEET_SPOT.md  V2_INTRADAY_ROADMAP.md  V3_INTRADAY_HIGH_DENSITY.md
execution_muscle/: CMakeLists.txt  execution_engine.py  execution_pipeline.hpp  fractional_differencer.hpp  inference_worker.py  kelly_sizer.hpp  main.cpp  mpc_solver.hpp  muscle  oms.py  paper_bot.py  risk_parity_sizer.py
qts_core/: logger.py
research_lab/: alpha_core.py  alpha_discovery.ipynb  alpha_labeler.py  alpha_plugins.py  alpha_ranker.py  alpha_ranker_sniper.py  alpha_universe.py  app.py  backtest_comparison.py  battle_of_strategies.py  data_engine.py  finalize_model.py  historical_data_fetcher.py  real_data_ingestor.py  recover_missing_data.py  verify_physics.py  verify_snr.py
scripts/: audit_rl_agent.py  compare_strategies_pro.py  debug_rl_env.py  diagnose_alpaca_history.py  expert_sim_engine.py  instant_plotter.py  monte_carlo_regime_jitter.py  precompute_rl_data.py  radical_strategy_battle.py  rl_evaluator.py  rl_logic_audit.py  simulate_option_b.py  simulate_production_hp.py  simulate_production_regime.py  target_2026_plotter.py  test_hysteresis_sim.py  train_bare_metal.py  train_rl_pilot.py  turbo_sim.py  verify_ghost_signals.py
tests/: test_alpha_ranker.py  test_alpha_universe.py  test_bayesian_pnl.py  test_data_engine.py  test_log.py  test_meta_controller.py  (+7 more)
(+7 files in other folders)
