[project]
name = "uqts-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=0.48",
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
]
