[project]
name = "qts2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=0.48",
    "alpha-vantage<3.0.0",
    "duckdb>=1.5.2",
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "loguru>=0.7.2",
    "numpy>=2.4.4",
    "osqp>=1.1.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polygon-api-client>=0.2.11",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shimmy>=0.2.1",
    "stable-baselines3>=2.0.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "timm>=1.0.26",
    "torch>=2.4.0",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
    "psutil>=7.2.2",
]

[tool.setuptools]
packages = ["research_lab", "alpha_factory", "cockpit_backend", "execution_muscle"]
package-dir = {"" = "."}
